adds creation flow

--- a/lib/i18n/ca.json
+++ b/lib/i18n/ca.json
@@ -3,5 +3,7 @@
   "work": "Exercici",
   "timer": "Temporitzador",
   "saved": "Guardats",
-  "new_timer": "Nou temporitzador"
+  "new_timer": "Nou temporitzador",
+  "rounds": "series",
+  "save": "Guardar"
 }
