--- a/lib/i18n/fr.json
+++ b/lib/i18n/fr.json
@@ -3,5 +3,7 @@
   "work": "work",
   "timer": "Timer",
   "saved": "Saved",
-  "new_timer": "New timer"
+  "new_timer": "New timer",
+  "rounds": "sets",
+  "save": "Save"
 }
