adds saved lists

--- a/lib/i18n/ca.json
+++ b/lib/i18n/ca.json
@@ -5,5 +5,6 @@
   "saved": "Guardats",
   "new_timer": "Nou temporitzador",
   "rounds": "series",
-  "save": "Guardar"
+  "save": "Guardar",
+  "time": "Temps"
 }
