--- a/lib/i18n/es.json
+++ b/lib/i18n/es.json
@@ -4,6 +4,7 @@
   "timer": "Temporizador",
   "saved": "Guardados",
   "new_timer": "Nuevo temporizador",
-  "rounds": "series",
-  "save": "Guardar"
+  "rounds": "Series",
+  "save": "Guardar",
+  "time": "Tiempo"
 }
