adds sets and rounds logic

--- a/lib/i18n/es.json
+++ b/lib/i18n/es.json
@@ -6,5 +6,6 @@
   "new_timer": "Nuevo temporizador",
   "rounds": "Series",
   "save": "Guardar",
-  "time": "Tiempo"
+  "time": "Tiempo",
+  "last_set": "Última serie!"
 }
