--- a/lib/i18n/ca.json
+++ b/lib/i18n/ca.json
@@ -6,5 +6,6 @@
   "new_timer": "Nou temporitzador",
   "rounds": "series",
   "save": "Guardar",
-  "time": "Temps"
+  "time": "Temps",
+  "last_set": "Última sèrie!"
 }
