--- a/lib/i18n/en.json
+++ b/lib/i18n/en.json
@@ -6,5 +6,6 @@
   "new_timer": "New timer",
   "rounds": "Sets",
   "save": "Save",
-  "time": "Time"
+  "time": "Time",
+  "last_set": "Last set!"
 }
