--- a/lib/i18n/fr.json
+++ b/lib/i18n/fr.json
@@ -6,5 +6,6 @@
   "new_timer": "New timer",
   "rounds": "sets",
   "save": "Save",
-  "time": "Temps"
+  "time": "Temps",
+  "last_set": "Última sèrie!"
 }
